Prevent tabzilla headings overlapping on long strings bug 869004

--- a/media/css/tabzilla/tabzilla.less
+++ b/media/css/tabzilla/tabzilla.less
@@ -182,13 +182,14 @@
     font-size: 13px;
     font-weight: bold;
     margin-bottom: .4em;
+    word-wrap: break-word;
 }
 
 #tabzilla-panel #tabzilla-nav h2 {
     font-weight: bold;
     font-size: 13px;
     margin: 0 20px .4em 0;
-    white-space: nowrap;
+    word-wrap: break-word;
 }
 
 #tabzilla-panel #tabzilla-nav ul {
